style: fix gap and margin top values (#44)

--- a/src/modules/edc-demo/components/asset-viewer/asset-viewer.component.scss
+++ b/src/modules/edc-demo/components/asset-viewer/asset-viewer.component.scss
@@ -15,6 +15,7 @@
 .search-form-field {
   min-width: 200px;
   width: 30%;
+  margin-top: 18px;
 }
 
 .card-actions {
@@ -30,6 +31,8 @@ mat-paginator {
   background-color: transparent;
 }
 
-#create-button {
-  margin-left: 10px;
+.container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Adjust the gap between elements */
 }
